# anvilate

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/: demo.tape
examples/: README.md  access_cover_sizing.py  beam_column_check.py  beam_section_sizing.py  bearing_reliability_life.py  bevel_gear_thrust.py  bimetal_thermostat_blade.py  bolt_tension_thread_area.py  bolted_cover_flange.py  bolted_joint_check.py  brace_tie_check.py  bracket_bolt_group_eccentric.py  bracket_weld_group_eccentric.py  bracket_weld_sizing.py  bushing_wear_life.py  cable_resonance_tuning.py  cam_base_circle_pressure_angle.py  cam_return_spring.py  canopy_snow_drift.py  cantilever_bracket_check.py  cart_drum_brake.py  clip_angle_edge_tearout.py  column_base_plate.py  conveyor_bearing_life.py  conveyor_chain_drive.py  coped_beam_web_shear.py  coupling_key_sizing.py  cover_plate_edge_fixity.py  crack_growth_inspection_interval.py  crane_hook_shank.py  crane_rail_on_foundation.py  davit_sheave_overhang.py  dfm_process_check.py  dock_edge_overhang.py  drive_shaft_sizing.py  drivetrain_shaft_twist.py  drivetrain_torsional_mode.py  engine_shaking_force.py  evidence_bundle.py  fan_deck_resonance.py  (+95 more)
openspec/: project.md
openspec/changes/column-least-radius-screen/: proposal.md  tasks.md
openspec/specs/agent-repair-loop/: spec.md
openspec/specs/artifact-export/: spec.md
openspec/specs/assembly-robotics/: spec.md
openspec/specs/benchmarking/: spec.md
src/anvilate/: __init__.py  evidence.py  scorecard.py
tests/: test_analysis.py  test_evidence.py  test_examples.py  test_export.py  test_industrial.py  test_scorecard.py  test_section.py  test_spec.py  test_standards.py  test_structural.py  test_tolerance.py  test_units.py
(+117 files in other folders)
