[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anvilate"
version = "0.0.1"
description = "Local-first design agent for mechanical engineers: plain English to physics-validated, parametric STEP/DXF."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Clay Good" }]
keywords = ["cad", "cae", "fea", "mechanical-engineering", "step", "parametric"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

# Only the foundational layers (units + spec IR) are implemented today, so
# their runtime dependencies are the only hard requirements. Geometry,
# validation, and export pull in OCCT/Gmsh/CalculiX and land as extras as
# those capabilities are built out (see openspec/specs/).
dependencies = [
    "pint>=0.24",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# DXF drawing export (ezdxf is MIT, pure-Python). The core stays dependency-light;
# import anvilate.export.dxf only pulls ezdxf when this extra is installed.
export = ["ezdxf>=1.1"]
dev = ["pytest>=8.0", "ruff>=0.6", "ezdxf>=1.1"]

[project.urls]
Homepage = "https://github.com/clay-good/anvilate"
Specification = "https://github.com/clay-good/anvilate/tree/main/openspec"

[tool.hatch.build.targets.wheel]
packages = ["src/anvilate"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
